Add more to Results section in final chapter.

--- a/abstract.tex
+++ b/abstract.tex
@@ -25,5 +25,7 @@ These layers were more common in hurricanes than in weaker TCs, as hurricanes we
 
 HS3 dropsondes deployed within and around TC Nadine (2012) observed two distinct upper-level stability maxima within the storm's cirrus canopy.
 Outside of the cirrus canopy, however, only one stability maximum was present in the upper levels.
-In a large rawinsonde dataset, multiple stability maxima like those observed in Nadine were observed more often within cold cirrus clouds than outside of cirrus.
-It is hypothesized that vertical gradients of radiative heatin, differential advection within the upper-tropospheric outflow layer, and vertical gradients of turbulence all could contribute to producing these multiple stability maxima.
+This maximum, just above the tropopause, was stronger over the cirrus canopy than outside of the cirrus canopy.
+Observations from a large rawinsonde dataset also show this structure, with a stronger temperature inversion located above the tropopause within regions of cold cirrus than outside of cold cirrus. 
+%Using all observations collected within 500 km of the seven TCs observed by HS3 dropsondes, multiple stability maxima like those observed in Nadine existed more often within cold cirrus clouds than outside of cold cirrus.
+It is hypothesized that vertical gradients of radiative heating, differential advection within the upper-tropospheric outflow layer, and vertical gradients of turbulence all could contribute to producing multiple stability maxima and the stronger temperature inversions in the lower stratosphere.
