--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -198,7 +198,7 @@ pages = {531-549}
 @article{ChenZhang2013,
 author = {Chen, H. and D.-L. Zhang},
 year = {2013},
-title = {On the rapid intensification of Hurricane Wilma (2005). Part II: Convective bursts and the upper-level warm core},
+title = {{On the rapid intensification of Hurricane Wilma (2005). Part II: Convective bursts and the upper-level warm core}},
 journal = JAS,
 volume = {70},
 pages = {146-162}
@@ -395,6 +395,15 @@ volume = {18},
 pages = {293-310}
 }
 
+@article{Griffin2017,
+author = {Griffin, S. M.},
+year = {2017},
+title = {{Climatology of tropical overshooting tops in North Atlantic tropical cyclones}},
+journal = JAMC,
+volume = {56},
+pages = {1783-1796}
+}
+
 @article{Griseetal2010,
 author = {Grise, K. M. and D. W. J. Thompson and T. Birner},
 year = {2010},
@@ -550,6 +559,15 @@ author = {Kimberlain, T. B. and E. S. Blake and J. P. Cangialosi},
 year   = {2016},
 title  = {{Tropical cyclone report: Hurricane Patricia. National Hurricane Center}},
 note   = {[Available online at www.nhc.noaa.gov]}
+}
+
+@article{Knappetal2011,
+author = {Knapp, K. R. and S. Ansari and C. L. Bain and M. A. Bourassa and M. J. Dickinson and C. Funk and C. N. Helms and C. C. Hennon and C. D. Holmes and G. J. Huffman and J. P. Kossin and H.-T. Lee and A. Loew and G. Magnusdottir},
+year = {2011},
+title = {Globally gridded satellite observations for climate studies},
+journal = BAMS,
+volume = {92},
+pages = {893-907}
 }
 
 @article{KomaromiDoyle2017,
