--- a/dissertation.tex
+++ b/dissertation.tex
@@ -25,10 +25,11 @@
 \begin{document}
 %\layout     %% this is helpful to check formatting
 
+%\sigblockalb
+
 \titlepage
 %\copyrightpage
 
-%\include{signature_page}
 \include{abstract}  %this is your abstract.tex file
 \include{ack}  %this is ack.tex file (acknowledgements)
 \tableofcontents        %these will be created automatically
@@ -38,7 +39,7 @@
 \include{patricia}
 \include{modeling}
 \include{hs3}
-\include{conclusions}
+%\include{conclusions}
 % ...
 % Add new \include{chapterX} statements for each chapter you add
 %\include{appendix}
