--- a/introduction.tex
+++ b/introduction.tex
@@ -121,7 +121,7 @@ In addition to the direct effect of radiative cooling on the tropopause-layer st
 The heating induces upward motion through the heat source, inflow below the heat source, and outflow above.
 \cite{Dinhetal2010} showed that these circulations act to spread cirrus clouds laterally, which then would feed back onto the radiative tendencies.
 Although the cloud-top radiative cooling played a negligible role in the radiatively-induced storm expansion observed by \cite{Buetal2014} and \cite{Fovelletal2016}, it did modify the circulation near the cloud top.
-In particular, it drives weak inflow above the cooling maximum and outflow below, along with subsidence within the region of cooling (see \citeauthor{Fovelletal2016} \citeyear{Fovelletal2016}, Fig. 21).
+In particular, it drove weak inflow above the cooling maximum and outflow below, along with subsidence within the region of cooling (see \citeauthor{Fovelletal2016} \citeyear{Fovelletal2016}, Fig. 21).
 Although these circulations are weak, their persistence could drive differential advection of potential temperature, as discussed by \cite{ChenZhang2013} and \cite{ChenGopalakrishnan2015},  which could modify the tropopause-layer static stability.
 
 \section{Outline}
