--- a/patricia.tex
+++ b/patricia.tex
@@ -30,7 +30,7 @@ This capability permits the rapid deployment of many dropsondes, providing cross
 The XDDs exhibited a warm bias of 18C and a dry bias of 5\% relative to RD-94 dropsondes.
 XDD thermodynamic measurements, like those of other in situ sounding instruments, were noisy and unreliable when the sensors became wet.
 An intensive quality control procedure \cite{BellTCI} removed unrealistic temperature and humidity observations that likely reflected sensor wetting, as well as relative humidity recorded at temperatures below -40\textdegree{}C, where humidity measurements were inaccurate because of slow sensor response time.
-A more complete description of HDSS’s specifications and error characteristics can be found in \cite{Blacketal2017} and \cite{DoyleTCI}, and a comprehensive description of tihe quality control procedure in \cite{BellTCI}.
+A more complete description of HDSS’s specifications and error characteristics can be found in \cite{Blacketal2017} and \cite{DoyleTCI}, and a comprehensive description of the quality control procedure in \cite{BellTCI}.
 
 Flying near 18.5-km altitude aboard the NASA WB-57 aircraft, HDSS deployed dropsondes with horizontal spacing as small as 4 km in the inner core of TC Patricia.
 This dataset builds upon that of the high-altitude dropsonde observations collected by the NASA Hurricane and Severe Storm Sentinel (HS3) investigation \cite{Braunetal2016}.
@@ -72,10 +72,10 @@ The center-crossing transects on 21, 22, and 23 October 2015 are shown in Figs. 
 Stars indicate dropsonde deployment locations and range rings are plotted every 20 km.
 Brightness temperatures colder than -80\textdegree{}C extended over a broad region of Patricia’s circulation on 21 October (Fig. \ref{fig:patricia_ir}a, pink shading).
 Convection was asymmetric about the storm center, with the coldest brightness temperatures (colder than -86\textdegree{}C) confined to a region 60–80 km west of Patricia’s center of circulation.
-By 22 October, Patricia had rapidly intensified to a category 3 hurricane (Fig. \ref{fig:vmax}), with an eye beginning to clear in the infrared (Figs. \ref{patricia_ir}b,c).
+By 22 October, Patricia had rapidly intensified to a category 3 hurricane (Fig. \ref{fig:vmax}), with an eye beginning to clear in the infrared (Figs. \ref{fig:patricia_ir}b,c).
 This rapid intensification continued over the next 18 h until the storm’s maximum sustained wind speed reached its peak
 of 185 kt (1 kt = 0.5144 m s\textsuperscript{-1}) at 1200 UTC 23 October (Fig. \ref{fig:vmax}; \citeauthor{Kimberlainetal2016} \citeyear{Kimberlainetal2016}).
-TCI conducted its final flight into Patricia shortly thereafter, crossing over the eye around 2000 UTC (Fig. \ref{fig:patricia_ir}d) as the storm begain to weaken.
+TCI conducted its final flight into Patricia shortly thereafter, crossing over the eye around 2000 UTC (Fig. \ref{fig:patricia_ir}d) as the storm began to weaken.
 
 The tropopause temperature, pressure, and $\theta$ observed along these four transects (Fig. \ref{fig:trop}) exhibit strong spatial and temporal variability.
 On 21 October, the tropopause temperature (Fig. \ref{fig:trop}a, blue line) was colder than -80\textdegree{}C at all radii.
@@ -94,7 +94,7 @@ These trends continued into 23 October (red lines), by which time the tropopause
 Cross sections of $\Delta T/\Delta z$ [K (100 m)\textsuperscript{-1}; Figs. \ref{fig:stab}a–d] and $N^2$ (10\textsuperscript{-4} s\textsuperscript{-2}; Figs. \ref{fig:stab}e–h) reveal dramatic changes in the static stability structure near the tropopause during Patricia’s RI.
 On 21 October (Fig. \ref{fig:stab}a), the cold-point tropopause was located between 16.9 and 17.4 km---a few hundred meters higher than the annual-mean tropopause height in the tropical east Pacific (see \citeauthor{Seideletal2001} \citeyear{Seideletal2001}, their Fig. 4a).
 A strong TIL (inversions represented by red shading) existed immediately above the tropopause, with temperature increasing upward by 2 K (100 m)\textsuperscript{-1} over a broad region of the circulation.
-This inversion was similar in magnitude to those observed by \cite{Gentry1967} and \cite{Waco1970} in Hurricanes Isbell (1964) and Beulah (1967), and manifested as a 500-m-thick ribbon of N2 greater than 10\textsuperscript{-3} s\textsuperscript{-2} (Fig. 4e).
+This inversion was similar in magnitude to those observed by \cite{Gentry1967} and \cite{Waco1970} in Hurricanes Isbell (1964) and Beulah (1967), and manifested as a 500-m-thick ribbon of $N^2$ greater than 10\textsuperscript{-3} s\textsuperscript{-2} (Fig. 4e).
 The inversion was strongest in the vicinity of the coldest cloud tops (Fig. \ref{fig:patricia_ir}a), reaching magnitudes greater than 4.5 K (100 m)\textsuperscript{-1} at four locations west of the storm center.
 Three of these maxima were accompanied by 100-m upward spikes in tropopause height and stronger lapse rates just below the tropopause than were observed outside of the coldest cloud tops.
 The dropsondes with the strongest inversions---dropsondes 13 and 15---were deployed within the region of coldest IR brightness temperature 40–80 km west of the center.
@@ -231,7 +231,7 @@ Elevated ozone concentrations observed by aircraft in the eye of Hurricane Ginny
 A number of modeling studies (\citeauthor{ZhangChen2012} \citeyear{ZhangChen2012}; \citeauthor{OhnoSatoh2015} \citeyear{OhnoSatoh2015}; \citeauthor{Kieuetal2016} \citeyear{Kieuetal2016}) note the development of a lower-stratospheric inflow layer connected to descent in the eye.
 Observations of radial velocity in Hurricane Patricia on 22 October (Figs. \ref{fig:velocities}a,b) corroborate the existence of this inflow layer.
 These observations are also consistent with a near-tropopause inflow layer observed by HS3 dropsondes in three different TCs \citep{KomaromiDoyle2017}.
-At the same time, Patricia’s cyclonic circulation pene trated into the lower stratosphere in a few places (Figs. \ref{fig:dtheta}b,c), particularly near the eye.
+At the same time, Patricia’s cyclonic circulation penetrated into the lower stratosphere in a few places (Figs. \ref{fig:dtheta}b,c), particularly near the eye.
 This is consistent with the model experiments of \cite{OhnoSatoh2015}, in which an upper-level warm core developed while the cyclonic circulation grew into the lower stratosphere.
 The authors hypothesized that this upward growth of the circulation facilitated strong upper-tropospheric warming by concentrating downdrafts in a region of large static stability.
 The simulations of \cite{SternZhang2013} likewise developed a warm core near the tropopause, where static stability began to increase from its minimum in the upper troposphere.
