--- a/turb.tex
+++ b/turb.tex
@@ -40,7 +40,7 @@ The rawinsonde data will allow the following questions to be addressed:
 %---------------------------------------------------------------------------------------%
 The U.S. High Vertical Resolution Radiosonde Data archive \citep{LoveGeller2012} is used to construct the radial–vertical structure of TC outflow.
 All sondes released within 1000 km of Atlantic basin TCs from 1998 to 2011 are used, including special soundings released at 0600 and 1800 UTC.
-The dataset includes sondes released from the eastern United States, the Bahamas, Puerto Rico, Grand Cayman, and Belize.
+The dataset includes sondes released from the eastern United States, Barbados, Puerto Rico, Grand Cayman, and Belize.
 Herein we analyze the vertical layer between 9 and 17 km, which is at the upper limit of---or above---the analyses performed by \cite{Molinarietal2014}.
 
 Storm center positions are determined using the National Hurricane Center Atlantic basin hurricane database (HURDAT; \citeauthor{Jarvinenetal1984} \citeyear{Jarvinenetal1984}).
@@ -74,7 +74,7 @@ The G-IV’s true airspeed for these data varies between 220 and 242 m s\textsup
 %---------------------------------------------------------------------------------------%
 \section{Results}
 %---------------------------------------------------------------------------------------%
-
+\label{section:resultssection}
 \subsection{Aircraft turbulence observations}
 
 Given that aircraft often observe turbulence while flying in the outflow of mesoscale convective systems, we first consider turbulence observed on an aircraft in the vicinity of a hurricane.
@@ -152,12 +152,12 @@ In addition, both observational \citep{Garrettetal2005} and modeling \citep{Buet
 In their idealized simulations of an intense hurricane, \cite{Buetal2014} found that, averaged over the diurnal cycle, the 12--16-km layer is characterized by net radiative cooling extending past the 300-km radius.
 Immediately below this cooling layer exists a broad region of weak radiative warming that reaches a maximum near 11-km altitude.
 The temperature difference structure in Fig. \ref{fig:tempdiffs} is consistent with these modeling results.
-Thus, it is plausible that radiative tendencies combine with adiabatic cooling near the tropopause to produce the lowerstability layer in hurricanes seen in Fig. \ref{fig:stabsheardiffs}a.
+Thus, it is plausible that radiative tendencies combine with adiabatic cooling near the tropopause to produce the lower-stability layer in hurricanes seen in Fig. \ref{fig:stabsheardiffs}a.
 Regardless of the mechanisms, the presence of this low-stability layer means that only small perturbations are required to decrease the bulk Richardson number to a value below 0.25.
 
 Distributions of the perturbation static stability and vertical wind shear are shown in Fig. \ref{fig:dist-pert}.
 These perturbations are computed by subtracting the azimuthally averaged static stability and vertical wind shear from each individual observation in the 11–15-km layer and within the 400-km radius.
-The azimuthal averages here use 100-km nonoverlapping radial bins instead of 200-km overlapping bins to avoid double counting observations in the distributions.
+The azimuthal averages here use 100-km non-overlapping radial bins instead of 200-km overlapping bins to avoid double counting observations in the distributions.
 Because of the skewness of the static stability and vertical wind shear distributions (see Fig. \ref{fig:dist-all}), the azimuthal averages are larger than most of the individual observations in the dataset.
 As a result, the peaks of the distributions in Fig. \ref{fig:dist-pert} are negative.
 
@@ -169,7 +169,7 @@ The vertical wind shear distribution is shifted toward higher values in hurrican
 This indicates that the shear perturbations in hurricanes are more positive (more favorable for low $R_b$) than in weak TCs.
 These larger perturbations coexist with larger mean vertical wind shear (Fig. \ref{fig:stabsheardiffs}b).
 
-The synthesis of these results suggests that the higher frequency of $R_b < 0.25$ in hurricanes is due to a combinationof decreased upper-tropospheric mean static stability and increased mean and perturbation vertical wind shear.
+The synthesis of these results suggests that the higher frequency of $R_b < 0.25$ in hurricanes is due to a combination of decreased upper-tropospheric mean static stability and increased mean and perturbation vertical wind shear.
 The perturbation static stability does not appear to contribute to the increased frequency of low $R_b$ in hurricanes.
 
 \subsection{Variation of Richardson number with time of day}
@@ -186,7 +186,7 @@ Evidence exists, however, that low $R_b$ is more common in the morning than in t
 The region in which low $R_b$ is most common at 1200 UTC---near 200 km---is the radius at which the diurnal pulse of cold cloud is expected to be located at 0800 LST.
 Since the majority of these sondes were released in the eastern time zone, where 1200 UTC corresponds to 0700 LST, these results indicate that the morning maximum of low Rb is located near the radius of the diurnal pulse as described by \cite{Dunionetal2014}.
 
-The diurnal variation of azimuthally averaged static stability (Fig. \ref{fig:stabsheartime}a) and vertical wind shear (Fig. \ref{stabsheartime}b) is small.
+The diurnal variation of azimuthally averaged static stability (Fig. \ref{fig:stabsheartime}a) and vertical wind shear (Fig. \ref{fig:stabsheartime}b) is small.
 Upper-tropospheric wind shear might be slightly larger in the morning than in the evening, but this difference is not statistically significant.
 The static stability profile and the tropopause level are nearly identical at 0000 and 1200 UTC.
 Thus, unlike the intensity variability seen in the previous section, the $R_b$ differences do not appear to be attributable to a more favorable average background state.
@@ -211,7 +211,7 @@ The key factor was lower mean static stability in the upper troposphere of hurri
 Higher temperatures below 14 km arose from the midtropospheric warm anomaly that is required to maintain thermal wind balance in an intensifying TC.
 In addition, it is likely that larger radiative heating exists in the hurricane’s well-developed and long-lasting cirrus canopy.
 The upper-tropospheric cooling was accompanied by a 1-km increase in tropopause height in hurricanes, which was associated with much lower static stability in the upper troposphere.
-It is hypothesized that persistent convection, gravity wave critical-layer interactions, and enhanced radiative coolingnear the top of the hurricane cirrus canopy contributed to the development of this cool layer.
+It is hypothesized that persistent convection, gravity wave critical-layer interactions, and enhanced radiative cooling near the top of the hurricane cirrus canopy contributed to the development of this cool layer.
 
 The mean fields do not account for local variations in static stability and vertical wind shear that are often responsible for low--Richardson number layers in mesoscale convective systems (\citeauthor{Lenzetal2009} \citeyear{Lenzetal2009}; \citeauthor{Trieretal2010} \citeyear{Trieretal2010}).
 The widely spaced rawinsondes employed in this study cannot evaluate the role of such local variations.
@@ -226,7 +226,7 @@ Such a radiative heating profile should act to decrease the upper-tropospheric s
 If the TC diurnal cycle is convective in nature, as suggested by \cite{Dunionetal2014}, and supported by \cite{BowmanFowler2015}, it is possible that by early morning the convection has acted to remove the instability created by these radiative effects.
 The diurnal variations in Richardson number and perturbation static stability, although small, are at least consistent with the presence of more active convection in the morning.
 
-Recent dropsonde observations from the NASA Global Hawk and WB-57 aircraft show promise in further illuminating how TCs modify their uppertropospheric environment.
+Recent dropsonde observations from the NASA Global Hawk and WB-57 aircraft show promise in further illuminating how TCs modify their upper-tropospheric environment.
 Dropsondes are deployed from these aircraft in the stratosphere, allowing an analysis of the full depth of the cirrus canopy.
 Unlike the rawinsonde composites used here, analyses from these soundings have large spatiotemporal resolution, which allows for a snapshot of the upper troposphere of a single storm.
 Preliminary work with these data show that very large horizontal temperature variations can arise across the cirrus canopy, and large fluctuations can occur at one location over time.
@@ -282,7 +282,7 @@ wind shear terms (10\textsuperscript{-4} s\textsuperscript{-2}) of the bulk Rich
 %FIGURE 7%
 \begin{figure*}[ht]
 \centerline{\includegraphics[width=39pc]{figures/fig7_pdf_perturbs_intensity.png}}
-\caption{Probability distributions of the perturbation static stability and vertical wind shear terms (10\textsuperscript{-4} s\textsuperscript{-2}) of the bulk Richardson number for hurricanes and weak TCs. Perturbations are computed by subtracting the azimuthal average from each individual observation within the 400-km radius and between the 11- and 15-km levels, using 100-km-wide, nonoverlapping radial bins. The physical characteristics of static stability and vertical wind shear cause the perturbation distributions to be primarily negative, as discussed in Section \ref{section:resultssection??}.}
+\caption{Probability distributions of the perturbation static stability and vertical wind shear terms (10\textsuperscript{-4} s\textsuperscript{-2}) of the bulk Richardson number for hurricanes and weak TCs. Perturbations are computed by subtracting the azimuthal average from each individual observation within the 400-km radius and between the 11- and 15-km levels, using 100-km-wide, nonoverlapping radial bins. The physical characteristics of static stability and vertical wind shear cause the perturbation distributions to be primarily negative, as discussed in Section \ref{section:resultssection}.}
 \label{fig:dist-pert}
 \end{figure*}
 
